align the grid items fix width

--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,9 @@ body {
 
 .Box {
   display: inline-block;
+  vertical-align: top;
   margin: 6px;
-  width: fit-content;
+  width: 180px;
   height: 150px;
   padding: 20px;
   color: white;
